--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -49,13 +49,28 @@
         </section>
             
     </main>
-    <footer>
-        <p>
-            &copy; <span id="currentyear"></span> Saratoga Chamber of Commerce
-        </p>
-        <p>
-            <span id="lastModified" ></span> Katlin Denney WDD231
-        </p>
+    <footer class="foot-container">
+        <div>
+            <p>
+                &copy; <span id="currentyear"></span> Saratoga Chamber of Commerce
+            </p>
+            <p>
+                <span id="lastModified" ></span> Katlin Denney WDD231
+            </p>
+        </div>
+        <div>
+            <img src="images/fb.avif" alt="facebook Logo" class="footer-logo">
+            <img src="images/in.avif" alt="linkedin Logo" class="footer-logo">
+            <img src="images/ig.avif" alt="instagram Logo" class="footer-logo">
+        </div>
+        <div>
+            Saratoga Chamber of Commerce<br>
+            123 Main St.<br>
+            Saratoga, CA 12345<br>
+            Phone: (123) 456-7890<br>
+            info@saratogachamber.org<br>
+        </div>
+
 
     </footer>
 </body>
