--- a/chamber/index.html
+++ b/chamber/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta property="og:title" content="Saratoga Chamber of Commerce Home">
+    <meta property="og:title" content="Saratoga Chamber of Commerce">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://https://github.com/katdenney/wdd231/blob/main/chamber/images/home.jpeg">
     <meta property="og:url" content="https://katdenney.github.io/wdd231/index.html"> <!-- URL of the page -->
@@ -13,12 +13,13 @@
     <meta name="author" content="Katlin Christine Denney"> <!-- Hi I'm the author -->
 
     <link rel="icon" href="images/favicontree.ico" type="image/x-icon"> <!-- favicon -->
-    <title>Chamber of Commerce Home Page</title>
+    <title>Saratoga Chamber of Commerce Home Page</title>
 
     <script src="scripts/date.js" defer></script> <!--date for footer -->
+    <script src="scripts/menuTog.js" defer></script> <!-- toggle for nav menu hamburger -->
     <script src="scripts/spotlight.js" defer></script> <!--spotlight section js-->
     <script src="scripts/weather.js" defer></script> 
-    <script src="scripts/menuTog.js" defer></script>
+    
    
 
     <link rel="preconnect" href="https://fonts.googleapis.com"> <!--google fonts -->
