fixing mobile veiw issues

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -17,7 +17,7 @@
 
     <script src="scripts/date.js" defer></script> <!-- JavaScript file for the date in the footer -->
     <script src="scripts/script.js" defer></script>
-    <script src="scripts/menuTog.js" defer></script> <!--i'll probs use this ?--> 
+    <script src="scripts/menutog.js" defer></script> <!--i'll probs use this ?--> 
     <script src="scripts/view.js" defer></script> <!-- JavaScript file for the view businesses -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com"> <!--google fonts -->
@@ -32,7 +32,6 @@
 </head>
 <body>
     <header class="top-header">
-        <h1>Saratoga Chamber of Commerce Directory</h1>
         <button id="menu-toggle" aria-label="Toggle menu">
             &#9776;
         </button>
@@ -46,8 +45,8 @@
         </nav>
     </header>
     <main class="main-content2">
+        <h1>Saratoga Chamber of Commerce Directory</h1>
         <section>
-            <h2>Directory</h2>
             <p>Businesses in the Saratoga area</p>
             <div class="view-toggle">
                 <button id="gridViewBtn">Grid View</button>
