--- a/chamber/index.html
+++ b/chamber/index.html
@@ -16,7 +16,7 @@
     <title>Saratoga Chamber of Commerce Home Page</title>
 
     <script src="scripts/date.js" defer></script> <!--date for footer -->
-    <script src="scripts/menuTog.js" defer></script> <!-- toggle for nav menu hamburger -->
+    <script src="scripts/menutog.js" defer></script> <!-- toggle for nav menu hamburger -->
     <script src="scripts/spotlight.js" defer></script> <!--spotlight section js-->
     <script src="scripts/weather.js" defer></script> 
     
@@ -34,8 +34,8 @@
 <body>
     <header>
         <section class="top-header">
+            <h1>Satatoga Chamber of Commerce </h1>
             <img src="images/logo.avif" alt="Saratoga Chamber of Commerce Logo" class="logo">
-            <h1>Satatoga Chamber of Commerce </h1> <!--I know I should fix this but i donthave time-->
             <button id="menu-toggle" aria-label="Toggle menu">
                 &#9776;    
             </button>
