--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -16,7 +16,7 @@
     <title>Chamber of Commerce Home Page</title>
 
     <script src="scripts/date.js" defer></script> <!--date for footer -->
-    <script src="scripts/menuTog.js" defer></script> <!--i'll probs use this ?-->
+    <script src="scripts/menutog.js" defer></script> <!--i'll probs use this ?-->
    
 
     <link rel="preconnect" href="https://fonts.googleapis.com"> <!--google fonts -->
