trying to fix the repetition in css

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -57,7 +57,7 @@
             </div>
         </section>
     </header>
-    <main class= "main-content">
+    <main id= "bg-semi-transparent" class= "main-content">
         <h2>Home Page</h2>
         <section class="events"> 
             <h2>Current Events</h2>
