--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -16,7 +16,7 @@
     <title>Chamber of Commerce Home Page</title>
 
     <script src="scripts/date.js" defer></script> <!--date for footer -->
-    <script src="scripts/menutog.js" defer></script> <!--i'll probs use this ?-->
+    <script src="scripts/menutog.js" defer></script>
    
 
     <link rel="preconnect" href="https://fonts.googleapis.com"> <!--google fonts -->
@@ -29,7 +29,6 @@
 </head>
 <body>
     <header>
-        <h1>Satatoga Chamber of Commerce </h1>
         <nav>
             <ul id="menu">
                 <li><a href="https://katdenney.github.io/wdd231/chamber/index.html">Home</a></li>
@@ -40,9 +39,10 @@
         </nav>
     </header>
     <main class= "main-content3">
+        <h1>Discover Satatoga </h1>
         <section>
             <h2>Discover</h2>
-            <p>Businesses in the Saratoga area</p>
+            <p>Events in the Saratoga area</p>
         </section>
         <section> 
 
