--- a/chamber/index.html
+++ b/chamber/index.html
@@ -91,9 +91,9 @@
             </p>
         </div>
         <div>
-            <img src="images/fb.avif" alt="facebook Logo" class="footer-logo">
-            <img src="images/in.avif" alt="linkedin Logo" class="footer-logo">
-            <img src="images/ig.avif" alt="instagram Logo" class="footer-logo">
+            <img src="images/fb.avif" alt="facebook Logo" class="footer-logo" width="50px" height="50px">
+            <img src="images/in.avif" alt="linkedin Logo" class="footer-logo" width="50px" height="50px">
+            <img src="images/ig.avif" alt="instagram Logo" class="footer-logo" width="50px" height="50px">
         </div>
         <div>
             Saratoga Chamber of Commerce<br>
