--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -20,9 +20,8 @@
     <script src="scripts/menutog.js" defer></script> <!--i'll probs use this ?--> 
     <script src="scripts/view.js" defer></script> <!-- JavaScript file for the view businesses -->
 
-    <link rel="preconnect" href="https://fonts.googleapis.com"> <!--google fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!--google fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;400;600&display=swap" rel="stylesheet"> <!--google fonts -->
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;400;600&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="styles/normalize.css"> <!-- Normalize CSS for consistent styling across browsers -->
     <link rel="stylesheet" href="styles/styles.css">  <!--Main stylesheet for the chamber website -->
