fix linked js files

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -16,8 +16,7 @@
     <title>Saratoga Chamber of Commerce Directory Page</title>
 
     <script src="scripts/date.js" defer></script> <!-- JavaScript file for the date in the footer -->
-    <script src="scripts/script.js" defer></script>
-    <script src="scripts/menutog.js" defer></script> <!--i'll probs use this ?--> 
+    <script src="scripts/menutog.js" defer></script> <!--hamburger--> 
     <script src="scripts/view.js" defer></script> <!-- JavaScript file for the view businesses -->
 
     <!-- Google Fonts -->
