--- a/chamber/join.html
+++ b/chamber/join.html
@@ -16,7 +16,7 @@
     <title>Join the Saratoga Chamber of Commerce</title>
 
     <script src="scripts/date.js" defer></script> <!--date for footer -->
-    <script src="scripts/menuTog.js" defer></script> <!-- toggle for nav menu hamburger -->
+    <script src="scripts/menutog.js" defer></script> <!-- toggle for nav menu hamburger -->
 
     <script type="module" src="scripts/timestamp.js" defer></script>
     <script type="module" src="scripts/join.js" defer></script>
