--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -9,7 +9,7 @@
     <meta property="og:image" content="#"> <!-- Placeholder for an image URL -->
     <meta property="og:url" content="https://katdenney.github.io/wdd231/index.html"> <!-- URL of the page -->
 
-    <meta name="description" content="This is the homepage for the Saratoga Chamber of Commerce website."> <!-- Description of the page -->
+    <meta name="description" content="The Discover page for the Saratoga Chamber of Commerce website."> <!-- Description of the page -->
     <meta name="author" content="Katlin Christine Denney"> <!-- Hi I'm the author -->
 
     <link rel="icon" href="images/favicontree.ico" type="image/x-icon"> <!-- favicon -->
@@ -19,9 +19,8 @@
     <script src="scripts/menutog.js" defer></script>
    
 
-    <link rel="preconnect" href="https://fonts.googleapis.com"> <!--google fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!--google fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;400;600&display=swap" rel="stylesheet"> <!--google fonts -->
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;400;600&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="styles/normalize.css"> <!-- Normalize CSS for consistent styling across browsers -->
     <link rel="stylesheet" href="styles/styles.css">
