--- a/chamber/join.html
+++ b/chamber/join.html
@@ -24,9 +24,8 @@
     
    
 
-    <link rel="preconnect" href="https://fonts.googleapis.com"> <!--google fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!--google fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;400;600&display=swap" rel="stylesheet"> <!--google fonts -->
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;400;600&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="styles/normalize.css"> <!-- Normalize CSS for consistent styling across browsers -->
     <link rel="stylesheet" href="styles/styles.css">
