hero img to avif

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -24,7 +24,7 @@
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;400;600&display=swap" rel="stylesheet">
-    
+
     <link rel="stylesheet" href="styles/normalize.css"> <!-- Normalize CSS for consistent styling across browsers -->
     <link rel="stylesheet" href="styles/styles.css"> 
     
@@ -48,7 +48,7 @@
             </nav>
         </section>
         <section class="hero">
-            <img src="images/hero.jpg" alt="Welcome to Saratoga Chamber of Commerce">
+            <img src="images/hero.avif" alt="Welcome to Saratoga Chamber of Commerce">
             <div class="hero-text">
                 <h1>Welcome to the Saratoga Chamber of Commerce</h1>
                 <p>Supporting local businesses and community growth.</p>
