--- a/chamber/join.html
+++ b/chamber/join.html
@@ -125,9 +125,9 @@
             </p>
         </div>
         <div>
-            <img src="images/fb.avif" alt="facebook Logo" class="footer-logo" width="50px" height="50px">
-            <img src="images/in.avif" alt="linkedin Logo" class="footer-logo" width="50px" height="50px">
-            <img src="images/ig.avif" alt="instagram Logo" class="footer-logo" width="50px" height="50px">
+            <img src="images/fb.avif" alt="facebook Logo" class="footer-logo">
+            <img src="images/in.avif" alt="linkedin Logo" class="footer-logo">
+            <img src="images/ig.avif" alt="instagram Logo" class="footer-logo">
         </div>
         <div>
             Saratoga Chamber of Commerce<br>
