--- a/chamber/index.html
+++ b/chamber/index.html
@@ -57,7 +57,7 @@
         </section>
     </header>
     <main id= "bg-semi-transparent" class= "main-content">
-        <h2>Home Page</h2>
+        <h1>Satatoga Chamber of Commerce </h1>
         <section class="events"> 
             <h2>Current Events</h2>
             <h3>Event</h3>
