--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -44,8 +44,8 @@
     </header>
     <main class="main-content2">
         <h1>Saratoga Chamber of Commerce Directory</h1>
-        <section>
-            <p>Businesses in the Saratoga area</p>
+        <section class="section-content">
+            <h2>Businesses in the Saratoga area</h2>
             <div class="view-toggle">
                 <button id="gridViewBtn">Grid View</button>
                 <button id="listViewBtn">List View</button>
