--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -28,12 +28,37 @@
 </head>
 
 <body>
-    
-    <h2 id="thankyou-modal-title">Thanks for Joining!</h2>
-    <p id="thankyou-modal-desc">Here's the information you submitted:</p>
-    <ul id="thankyou-details"></ul>
-    <button onclick="window.location.href='index.html'">Close</button>
-    <script type="module" src="scripts/thankyou.js" defer></script>
-    
+    <header class="top-header">
+        <h1> The Saratoga Chamber of Commerce</h2>
+        <img src="images/logo.avif" alt="Saratoga Chamber of Commerce Logo" class="logo">
+    </header>
+    <main>
+        <section class="section-content">
+        <h1>Thank you!</h1>
+        </section>
+        <section id="thankyou">
+        <h2 id="thankyou-modal-title">We appreciate you joining!</h2>
+        <p id="thankyou-modal-desc">Here's the information you submitted:</p>
+        <ul id="thankyou-details"></ul>
+        <div>
+            <button onclick="window.location.href='index.html'">Close</button>
+        </div>
+        <script type="module" src="scripts/thankyou.js" defer></script>
+    </section>
+    </main>
+    <footer class="foot-container">
+        <div>
+            <img src="images/fb.avif" alt="facebook Logo" class="footer-logo">
+            <img src="images/in.avif" alt="linkedin Logo" class="footer-logo">
+            <img src="images/ig.avif" alt="instagram Logo" class="footer-logo">
+        </div>
+        <div>
+            Saratoga Chamber of Commerce<br>
+            123 Main St.<br>
+            Saratoga, CA 12345<br>
+            Phone: (123) 456-7890<br>
+            info@saratogachamber.org<br>
+        </div>
+    </footer>
 </body>
 </html>
