--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -29,18 +29,23 @@
    
 </head>
 <body>
-    <header class="top-header">
-        <button id="menu-toggle" aria-label="Toggle menu">
-            &#9776;
-        </button>
-        <nav>
-            <ul id="menu">
-                <li><a href="https://katdenney.github.io/wdd231/chamber/index.html">Home</a></li>
-                <li><a href="https://katdenney.github.io/wdd231/chamber/discover.html">Discover</a></li>
-                <li><a href="https://katdenney.github.io/wdd231/chamber/directory.html" class="active">Directory</a></li>
-                <li><a href="https://katdenney.github.io/wdd231/chamber/join.html">Join</a></li>
-            </ul>  
-        </nav>
+    <header>
+        <section class="top-header"> 
+            <h1>Directory</h1>
+                <img src="images/logo.avif" alt="Saratoga Chamber of Commerce Logo" class="logo">
+                <button id="menu-toggle" aria-label="Toggle menu">
+                    &#9776;
+                </button>
+            
+            <nav>
+                <ul id="menu">
+                    <li><a href="https://katdenney.github.io/wdd231/chamber/index.html">Home</a></li>
+                    <li><a href="https://katdenney.github.io/wdd231/chamber/discover.html">Discover</a></li>
+                    <li><a href="https://katdenney.github.io/wdd231/chamber/directory.html" class="active">Directory</a></li>
+                    <li><a href="https://katdenney.github.io/wdd231/chamber/join.html">Join</a></li>
+                </ul>  
+            </nav>
+    </section>
     </header>
     <main class="main-content2">
         <h1>Saratoga Chamber of Commerce Directory</h1>
