--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta property="og:title" content="Saratoga Chamber of Commerce Home">
+    <meta property="og:title" content="Discover the Saratoga Chamber of Commerce">
     <meta property="og:type" content="website">
     <meta property="og:image" content="#"> <!-- Placeholder for an image URL -->
     <meta property="og:url" content="https://katdenney.github.io/wdd231/index.html"> <!-- URL of the page -->
@@ -28,16 +28,23 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul id="menu">
-                <li><a href="https://katdenney.github.io/wdd231/chamber/index.html">Home</a></li>
-                <li><a href="https://katdenney.github.io/wdd231/chamber/discover.html" class="active">Discover</a></li>
-                <li><a href="https://katdenney.github.io/wdd231/chamber/directory.html">Directory</a></li>
-                <li><a href="https://katdenney.github.io/wdd231/chamber/join.html">Join</a></li>
-            </ul> 
-        </nav>
+        <section class="top-header">
+            <h1>Discover</h1>
+            <img src="images/logo.avif" alt="Saratoga Chamber of Commerce Logo" class="logo">
+            <button id="menu-toggle" aria-label="Toggle menu">
+                &#9776;    
+            </button>
+            <nav>
+                <ul id="menu">
+                    <li><a href="https://katdenney.github.io/wdd231/chamber/index.html">Home</a></li>
+                    <li><a href="https://katdenney.github.io/wdd231/chamber/discover.html" class="active">Discover</a></li>
+                    <li><a href="https://katdenney.github.io/wdd231/chamber/directory.html">Directory</a></li>
+                    <li><a href="https://katdenney.github.io/wdd231/chamber/join.html">Join</a></li>
+                </ul> 
+            </nav>
+    </section>
     </header>
-    <main class= "main-content3">
+    <main class= "main-content2">
         <h1>Discover Satatoga </h1>
         <section>
             <h2>Discover</h2>
