--- a/chamber/join.html
+++ b/chamber/join.html
@@ -34,6 +34,7 @@
     <header>
         <section class="top-header">
             <h1>Join the Satatoga Chamber of Commerce </h1>
+            <img src="images/logo.avif" alt="Saratoga Chamber of Commerce Logo" class="logo">
             <button id="menu-toggle" aria-label="Toggle menu">
                 &#9776;
             </button>
@@ -45,7 +46,7 @@
                     <li><a href="https://katdenney.github.io/wdd231/chamber/join.html" class="active">Join</a></li>
                 </ul> 
             </nav>
-    </section>
+        </section>
     </header>
     <main class= "main-content">
         <h2>Become a Member</h2>
