--- a/chamber/join.html
+++ b/chamber/join.html
@@ -18,11 +18,6 @@
     <script src="scripts/date.js" defer></script> <!--date for footer -->
     <script src="scripts/menutog.js" defer></script> <!-- toggle for nav menu hamburger -->
 
-    <script type="module" src="scripts/timestamp.js" defer></script>
-    <script type="module" src="scripts/modal.js" defer></script>
-    <script type="module" src="scripts/join.js" defer></script>
-   
-
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;400;600&display=swap" rel="stylesheet">
 
@@ -143,5 +138,8 @@
         </div>
 
     </footer>
+    <script type="module" src="scripts/timestamp.js"></script>
+    <script type="module" src="scripts/modal.js"></script>
+    <script type="module" src="scripts/join.js"></script>
 </body>
 </html>
